[gd_scene load_steps=18 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://textures/banner.png" type="Texture" id=2]
[ext_resource path="res://fonts/font0.fnt" type="BitmapFont" id=3]
[ext_resource path="res://textures/unfolder.tex" type="Texture" id=4]
[ext_resource path="res://textures/rect.png" type="Texture" id=5]
[ext_resource path="res://fonts/arial0.fnt" type="BitmapFont" id=6]
[ext_resource path="res://textures/chacked.png" type="Texture" id=7]
[ext_resource path="res://textures/unchacked.png" type="Texture" id=8]
[ext_resource path="res://textures/mute.tex" type="Texture" id=9]
[ext_resource path="res://textures/unmute.tex" type="Texture" id=10]
[ext_resource path="res://textures/selected_tab_2.png" type="Texture" id=11]
[ext_resource path="res://textures/not_available_icon.png" type="Texture" id=12]
[ext_resource path="res://textures/tab.png" type="Texture" id=13]
[ext_resource path="res://objects/lvl_button.tscn" type="PackedScene" id=14]
[ext_resource path="res://textures/play.png" type="Texture" id=15]
[ext_resource path="res://objects/select_button.tscn" type="PackedScene" id=16]
[ext_resource path="res://textures/rect2.png" type="Texture" id=17]

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="banner" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
transform/scale = Vector2( 1.35021, 1.58824 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="banner2" type="Sprite" parent="."]

transform/pos = Vector2( 2880, 540 )
transform/scale = Vector2( 1.35021, 1.58824 )
texture = ExtResource( 2 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="rect" type="ReferenceFrame" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
__meta__ = {
"_edit_lock_": true
}

[node name="hint" type="Control" parent="Control/rect"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 270.0
margin/right = 40.0
margin/bottom = 230.0

[node name="version" type="Label" parent="Control/rect/hint"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1660.0
margin/top = 200.0
margin/right = 2183.0
margin/bottom = 294.0
custom_fonts/font = ExtResource( 3 )
text = "version 0.4.1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hint_line" type="Patch9Frame" parent="Control/rect/hint"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -230.0
margin/top = 10.0
margin/right = 2115.0
margin/bottom = 253.0
texture = ExtResource( 4 )
patch_margin/left = 633
patch_margin/top = 109
patch_margin/right = 1

[node name="quit" type="Patch9Frame" parent="Control/rect/hint"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 140.0
margin/right = 260.0
margin/bottom = 250.0
texture = ExtResource( 5 )
patch_margin/left = 40
patch_margin/top = 40
patch_margin/right = 40
patch_margin/bottom = 40
__meta__ = {
"_edit_group_": true
}

[node name="quit_button" type="Button" parent="Control/rect/hint/quit"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 110.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Control/rect/hint/quit"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 343.0
margin/bottom = 157.0
custom_fonts/font = ExtResource( 6 )
text = "QUIT"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tap_mode" type="CheckBox" parent="Control/rect/hint"]

visibility/self_opacity = 0.6
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 170.0
margin/right = 420.0
margin/bottom = 260.0
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_constants/check_vadjust = 0
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
flat = false
align = 0

[node name="Label" type="Label" parent="Control/rect/hint/tap_mode"]

visibility/self_opacity = 0.6
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 104.0
margin/top = 21.0
margin/right = 2056.0
margin/bottom = 115.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.116364, 0.241525, 0.480469, 1 )
text = "TAP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tutorial" type="CheckBox" parent="Control/rect/hint"]

visibility/self_opacity = 0.6
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 70.0
margin/right = 420.0
margin/bottom = 160.0
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_constants/check_vadjust = 0
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
flat = false
align = 0

[node name="Label" type="Label" parent="Control/rect/hint/tutorial"]

visibility/self_opacity = 0.6
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 104.0
margin/top = 21.0
margin/right = 2056.0
margin/bottom = 118.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.116364, 0.241525, 0.480469, 1 )
text = "TUTORIAL"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tabs" type="Control" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 0.0
margin/right = 37.0
margin/bottom = 40.0

[node name="mute" type="CheckBox" parent="Control/tabs"]

visibility/self_opacity = 0.6
anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1733.0
margin/top = 56.0
margin/right = -1983.0
margin/bottom = 266.0
custom_icons/checked = ExtResource( 9 )
custom_icons/unchecked = ExtResource( 10 )
custom_constants/check_vadjust = 0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 0
shortcut = null
flat = false
align = 0

[node name="selected_pos" type="Control" parent="Control/tabs"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="p0" type="Position2D" parent="Control/tabs/selected_pos"]

transform/pos = Vector2( -1, 0 )

[node name="p1" type="Position2D" parent="Control/tabs/selected_pos"]

transform/pos = Vector2( 432, 0 )

[node name="p2" type="Position2D" parent="Control/tabs/selected_pos"]

transform/pos = Vector2( 868, 0 )

[node name="p3" type="Position2D" parent="Control/tabs/selected_pos"]

transform/pos = Vector2( 1305, 0 )

[node name="selected_tab" type="Control" parent="Control/tabs"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = 0.0
margin/right = -2.0
margin/bottom = 0.0

[node name="selected_label1" type="Patch9Frame" parent="Control/tabs/selected_tab"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 0.0
margin/right = 2088.0
margin/bottom = 109.0
texture = ExtResource( 11 )
patch_margin/left = 633
patch_margin/top = 109
patch_margin/right = 1

[node name="selected_label2" type="Patch9Frame" parent="Control/tabs/selected_tab"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2078.0
margin/top = 0.0
margin/right = 5.0
margin/bottom = 109.0
texture = ExtResource( 11 )
patch_margin/left = 633
patch_margin/top = 109
patch_margin/right = 1

[node name="label" type="Label" parent="Control/tabs/selected_tab"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 18.0
margin/top = 65.0
margin/right = 738.0
margin/bottom = 156.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.815686 )
text = "SINGLE"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="not_available_icon" type="Sprite" parent="Control/tabs/selected_tab"]

transform/pos = Vector2( 45.704, 68.735 )
texture = ExtResource( 12 )

[node name="tab0" type="Sprite" parent="Control/tabs"]

visibility/visible = false
transform/pos = Vector2( 218.327, 70.717 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Control/tabs/tab0"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -204.0
margin/top = -11.0
margin/right = 506.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.480863 )
text = "SINGLE"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="not_available_icon" type="Sprite" parent="Control/tabs/tab0"]

transform/pos = Vector2( -183.884, 1.23029 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )

[node name="tab1" type="Sprite" parent="Control/tabs"]

transform/pos = Vector2( 652.327, 70.717 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Control/tabs/tab1"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -164.0
margin/top = -11.0
margin/right = 467.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.480863 )
text = "HOTSEAT"
align = 2
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tab2" type="Sprite" parent="Control/tabs"]

transform/pos = Vector2( 1088.33, 70.717 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Control/tabs/tab2"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -180.0
margin/top = -11.0
margin/right = 486.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.480863 )
text = "LAN"
align = 2
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="not_available_icon" type="Sprite" parent="Control/tabs/tab2"]

transform/pos = Vector2( -183.884, 1.23029 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )

[node name="tab3" type="Sprite" parent="Control/tabs"]

transform/pos = Vector2( 1525.33, 70.717 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Control/tabs/tab3"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -167.0
margin/top = -10.0
margin/right = 464.0
margin/bottom = 81.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.480863 )
text = "ONLINE"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="not_available_icon" type="Sprite" parent="Control/tabs/tab3"]

transform/pos = Vector2( -182.884, 1.23029 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )

[node name="buttons" type="Control" parent="Control/tabs"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Button0" type="Button" parent="Control/tabs/buttons"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 9.0
margin/right = 435.0
margin/bottom = 110.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button1" type="Button" parent="Control/tabs/buttons"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 437.0
margin/top = 5.0
margin/right = 868.0
margin/bottom = 106.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button2" type="Button" parent="Control/tabs/buttons"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 873.0
margin/top = 5.0
margin/right = 1304.0
margin/bottom = 106.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button3" type="Button" parent="Control/tabs/buttons"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1310.0
margin/top = 5.0
margin/right = 1741.0
margin/bottom = 106.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="l" type="Node2D" parent="Control/tabs"]

transform/scale = Vector2( -1, 1 )

[node name="selected_label" type="Patch9Frame" parent="Control/tabs/l"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1971.0
margin/top = 170.0
margin/right = 239.0
margin/bottom = 413.0
texture = ExtResource( 4 )
patch_margin/left = 633
patch_margin/top = 109
patch_margin/right = 1

[node name="label" type="Label" parent="Control/tabs"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1535.0
margin/top = 225.0
margin/right = 2252.0
margin/bottom = 316.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.815686 )
text = "SINGLE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mode0" type="Control" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="label" type="Label" parent="Control/mode0"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 333.0
margin/right = 1921.0
margin/bottom = 819.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.815686 )
text = "SORRY"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lvl0" parent="Control/mode0" instance=ExtResource( 14 )]

margin/left = 20.0
margin/top = 220.0
margin/right = 220.0
margin/bottom = 330.0

[node name="lvl1" parent="Control/mode0" instance=ExtResource( 14 )]

margin/left = 250.0
margin/top = 220.0
margin/right = 450.0
margin/bottom = 330.0
level = 1

[node name="lvl2" parent="Control/mode0" instance=ExtResource( 14 )]

margin/left = 470.0
margin/top = 220.0
margin/right = 670.0
margin/bottom = 330.0
level = 2

[node name="lvl3" parent="Control/mode0" instance=ExtResource( 14 )]

margin/left = 690.0
margin/top = 220.0
margin/right = 890.0
margin/bottom = 330.0
level = 3

[node name="lvl4" parent="Control/mode0" instance=ExtResource( 14 )]

margin/left = 920.0
margin/top = 220.0
margin/right = 1120.0
margin/bottom = 330.0
level = 4

[node name="lvl5" parent="Control/mode0" instance=ExtResource( 14 )]

margin/left = 1140.0
margin/top = 220.0
margin/right = 1340.0
margin/bottom = 330.0
level = 5

[node name="mode1" type="Control" parent="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="start" type="Patch9Frame" parent="Control/mode1"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 240.0
margin/right = 236.0
margin/bottom = 436.0
texture = ExtResource( 5 )
patch_margin/left = 40
patch_margin/top = 40
patch_margin/right = 40
patch_margin/bottom = 40
__meta__ = {
"_edit_group_": true
}

[node name="play" type="Sprite" parent="Control/mode1/start"]

transform/pos = Vector2( 98, 98 )
texture = ExtResource( 15 )

[node name="start_button" type="Button" parent="Control/mode1/start"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 196.0
margin/bottom = 196.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="select_button0" parent="Control/mode1" instance=ExtResource( 16 )]

margin/left = 290.0
margin/top = 240.0
margin/right = 554.0
margin/bottom = 535.0
avatar = 1

[node name="select_button1" parent="Control/mode1" instance=ExtResource( 16 )]

margin/left = 580.0
margin/top = 240.0
margin/right = 844.0
margin/bottom = 535.0
stand = 1
avatar = 23

[node name="select_button2" parent="Control/mode1" instance=ExtResource( 16 )]

margin/left = 880.0
margin/top = 240.0
margin/right = 1144.0
margin/bottom = 535.0
stand = 2

[node name="select_button3" parent="Control/mode1" instance=ExtResource( 16 )]

margin/left = 1180.0
margin/top = 240.0
margin/right = 1444.0
margin/bottom = 535.0
stand = 3

[node name="mode2" type="Control" parent="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="label" type="Label" parent="Control/mode2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 333.0
margin/right = 1921.0
margin/bottom = 819.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.815686 )
text = "SORRY"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mode3" type="Control" parent="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="label" type="Label" parent="Control/mode3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 333.0
margin/right = 1921.0
margin/bottom = 819.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0784314, 0.239216, 0.486275, 0.815686 )
text = "SORRY"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="char_selector" type="Patch9Frame" parent="Control"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 260.0
margin/top = 270.0
margin/right = 1500.0
margin/bottom = 964.0
texture = ExtResource( 17 )
modulate = Color( 0.341176, 0.729412, 0.901961, 0.768627 )
patch_margin/left = 40
patch_margin/top = 40
patch_margin/right = 40
patch_margin/bottom = 40
__meta__ = {
"_edit_group_": true
}

[node name="cancel" type="Button" parent="Control/char_selector"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -280.0
margin/top = -304.0
margin/right = 1690.0
margin/bottom = 836.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="select_button4" parent="Control/char_selector" instance=ExtResource( 16 )]

margin/left = 40.0
margin/top = 43.0
margin/right = 304.0
margin/bottom = 338.0
avatar = 1
in_selector = true

[node name="select_button8" parent="Control/char_selector" instance=ExtResource( 16 )]

margin/left = 40.0
margin/top = 353.0
margin/right = 304.0
margin/bottom = 648.0
avatar = 4
in_selector = true

[node name="select_button5" parent="Control/char_selector" instance=ExtResource( 16 )]

margin/left = 340.0
margin/top = 43.0
margin/right = 604.0
margin/bottom = 338.0
avatar = 2
in_selector = true

[node name="select_button8 3" parent="Control/char_selector" instance=ExtResource( 16 )]

margin/left = 340.0
margin/top = 353.0
margin/right = 604.0
margin/bottom = 648.0
avatar = 5
in_selector = true

[node name="select_button6" parent="Control/char_selector" instance=ExtResource( 16 )]

margin/left = 640.0
margin/top = 43.0
margin/right = 904.0
margin/bottom = 338.0
avatar = 3
in_selector = true

[node name="select_button7" parent="Control/char_selector" instance=ExtResource( 16 )]

margin/left = 940.0
margin/top = 43.0
margin/right = 1204.0
margin/bottom = 338.0
avatar = 23
in_selector = true

[node name="x_button" parent="Control/char_selector" instance=ExtResource( 16 )]

margin/left = 640.0
margin/top = 353.0
margin/right = 904.0
margin/bottom = 648.0
avatar = 1
in_selector = true
xxx = true

[node name="Camera" type="Camera2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0.0248928, -0.0497885 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[connection signal="pressed" from="Control/rect/hint/quit/quit_button" to="." method="_on_quit_button_pressed"]

[connection signal="toggled" from="Control/rect/hint/tap_mode" to="." method="_on_tap_mode_toggled"]

[connection signal="toggled" from="Control/rect/hint/tutorial" to="." method="_on_tutorial_toggled"]

[connection signal="toggled" from="Control/tabs/mute" to="." method="_on_mute_toggled"]

[connection signal="pressed" from="Control/tabs/buttons/Button0" to="." method="_on_Button0_pressed"]

[connection signal="pressed" from="Control/tabs/buttons/Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Control/tabs/buttons/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Control/tabs/buttons/Button3" to="." method="_on_Button3_pressed"]

[connection signal="pressed" from="Control/mode1/start/start_button" to="." method="_on_start_button_pressed"]

[connection signal="pressed" from="Control/char_selector/cancel" to="." method="_on_cancel_pressed"]


